<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name"
        android:hint="@string/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_greeting"/>

    <TextView
        android:id="@+id/text_hello_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>