<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/edit_year"
        android:hint="@string/enter_year"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_check_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_year"/>

    <TextView
        android:id="@+id/text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>