<resources>
    <string name="app_name">Exercism Kotlin</string>

    <string name="hello_world">Hello World</string>
    <string name="hello_world_formatted" formatted="false">Hello, %s!</string>
    <string name="enter_name">Enter Name</string>
    <string name="display_greeting">Display Greeting</string>

    <string name="leap">Leap</string>
    <string name="enter_year">Enter Year</string>
    <string name="check_year">Check Year</string>
    <string name="bad_data">Bad Data. Enter 4 digit year.</string>
    <string name="leap_year">Leap Year</string>
    <string name="non_leap_year">Non Leap Year</string>

    <string name="clock">Clock</string>
    <string name="gigasecond">Gigasecond</string>
    <string name="raindrops">Raindrops</string>
    <string name="triangle">triangle</string>
    <string name="difference_of_squares">Difference of Squares</string>
    <string name="secret_handshake">Secret Handshake</string>
    <string name="food_chain">Food Chain</string>
    <string name="house">House</string>
</resources>
